Update 03.Konsultacii.java